<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/android:colorBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/android:colorBackground"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle"
            app:layout_anchor="@+id/app_bar_layout"
            app:layout_anchorGravity="center"
            app:menu="@menu/vacancy_details_menu"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/vacancy"
            app:titleTextAppearance="@style/ToolbarTitle" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginHorizontal="@dimen/padding_medium"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/padding_medium"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name_vacancy"
                style="@style/BoldTextExtraLarge"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/padding_large"
                tools:text="@string/name_vacancy_example" />

            <TextView
                android:id="@+id/tv_salary_vacancy"
                style="@style/MediumTextLarge.22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_very_small"
                android:textColor="?attr/colorOnBackground"
                tools:text="@string/salary_vacancy_example" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/company_card"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/padding_large"
                android:background="@drawable/bg_card_rounded">

                <ImageView
                    android:id="@+id/ic_company"
                    style="@style/CompanyLogoImage"
                    android:layout_width="@dimen/icon_size_large"
                    android:layout_height="@dimen/icon_size_large"
                    android:layout_marginTop="@dimen/padding_medium"
                    android:layout_marginBottom="@dimen/padding_medium"
                    android:layout_marginStart="@dimen/padding_medium"
                    android:contentDescription="@null"
                    android:scaleType="centerInside"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_company_logo_placeholder" />

                <TextView
                    android:id="@+id/tv_name_company"
                    style="@style/MediumTextLarge.22"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_medium"
                    android:layout_marginBottom="@dimen/padding_medium"
                    android:layout_marginStart="@dimen/padding_small"
                    android:textColor="@color/black_universal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ic_company"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/company_name_example" />

                <TextView
                    android:id="@+id/tv_company_city"
                    style="@style/RegularTextMedium"
                    android:textColor="@color/black_universal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/tv_name_company"
                    app:layout_constraintStart_toStartOf="@id/tv_name_company"
                    app:layout_constraintTop_toBottomOf="@id/tv_name_company"
                    tools:text="@string/company_city_example" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/experience"
                style="@style/RegularTextMedium"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/padding_large"
                android:text="@string/needed_experience"
                android:fontFamily="@font/ys_display_bold" />

            <TextView
                android:id="@+id/tv_title_needed_experience"
                style="@style/RegularTextMedium"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_very_small"
                tools:text="@string/needed_experience_example" />

            <TextView
                android:id="@+id/tv_employment_type"
                style="@style/RegularTextMedium"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_very_small"
                tools:text="@string/employment_type_example"/>

            <TextView
                android:id="@+id/tv_title_description"
                style="@style/MediumTextLarge.22"
                android:textColor="?attr/colorOnBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                android:text="@string/job_description" />

            <TextView
                android:id="@+id/tv_description"
                style="@style/RegularTextMedium"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/padding_medium"
                tools:text="@string/full_description_with_formatting_example"/>

            <TextView
                android:id="@+id/tv_skills_title"
                style="@style/MediumTextLarge.22"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/key_skills" />

            <TextView
                android:id="@+id/tv_skills"
                style="@style/RegularTextMedium"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_medium"
                tools:text="@string/key_skills_example" />

            <TextView
                android:id="@+id/tv_title_contacts"
                style="@style/MediumTextLarge.22"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="?attr/colorOnBackground"
                android:layout_marginTop="@dimen/padding_medium"
                android:text="@string/contacts" />
            <TextView
                android:id="@+id/contact_person"
                style="@style/MediumTextMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_medium"
                android:text="@string/contact_person"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_contact_person"
                style="@style/RegularTextMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_very_small"
                android:visibility="gone"
                tools:text="Ирина" />

            <TextView
                android:id="@+id/e_mail"
                style="@style/MediumTextMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_medium"
                android:text="@string/e_mail"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_e_mail"
                style="@style/RegularTextMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_very_small"
                android:textColor="@color/blue"
                android:visibility="gone"
                tools:text="t.aynur@yandex.ru" />

            <TextView
                android:id="@+id/number_phone"
                style="@style/MediumTextMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_medium"
                android:text="@string/phone"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_number_phone"
                style="@style/RegularTextMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_very_small"
                android:textColor="@color/blue"
                android:visibility="gone"
                tools:text="+7 (904) 329-27-71" />

            <TextView
                android:id="@+id/comment"
                style="@style/MediumTextMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_medium"
                android:text="@string/comment"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_comment"
                style="@style/RegularTextMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_very_small"
                android:visibility="gone"
                tools:text="Заполнить анкету можно на нашем сайте" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/icon_size_large"
        android:layout_height="@dimen/icon_size_large"
        android:visibility="gone"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/error_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/img_vacancy_not_found_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_error"
            style="@style/MediumTextLarge.22"
            android:layout_width="@dimen/tv_error_layout_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:textAlignment="center"
            android:text="@string/vacancy_not_found_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_error" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
