<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/android:colorBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/android:colorBackground"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/filters"
            app:titleTextAppearance="@style/ToolbarTitle" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_industry"
        style = "@style/HintAppearance"
        app:placeholderTextColor="@color/gray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/industry"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:placeholderText="@string/industry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_industry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="true"
            android:inputType="none"
            android:cursorVisible="false"
            android:ellipsize="end"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/expected_salary_container"
        style = "@style/SalaryField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_large"
        android:hint="@string/wanted_salary"
        app:placeholderText="@string/enter_amount"
        app:placeholderTextColor="?attr/hintTextColor"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/til_industry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/expected_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SearchField"
            android:background="@drawable/bg_search_field"
            android:inputType="number"
            android:digits="0123456789"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/clear_icon"
        style="@style/SearchIconButton"
        android:visibility="gone"
        android:src="@drawable/ic_close"
        app:layout_constraintTop_toTopOf="@id/expected_salary_container"
        app:layout_constraintBottom_toBottomOf="@id/expected_salary_container"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/materialCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_large"
        android:layout_marginTop="24dp"
        android:enabled="true"
        android:layoutDirection="rtl"
        android:paddingStart="0dp"
        android:text="@string/not_salary"
        android:textAppearance="@style/RegularTextMedium"
        android:textDirection="ltr"
        app:buttonTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expected_salary_container"
        app:useMaterialThemeColors="false" />

    <Button
        android:id="@+id/apply_button"
        android:textAppearance="@style/MediumTextMedium"
        android:layout_width="0dp"
        android:layout_height="@dimen/reset_button_height"
        android:layout_marginBottom="@dimen/padding_small"
        android:background="@drawable/bg_search_info"
        android:text="@string/apply"
        android:textAllCaps="false"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/reset_button"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder" />

    <Button
        android:id="@+id/reset_button"
        android:textAppearance="@style/MediumTextMedium"
        android:textColor="@color/red"
        android:layout_width="0dp"
        android:layout_height="@dimen/reset_button_height"
        android:layout_marginBottom="@dimen/padding_large"
        android:background="@android:color/transparent"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder" />
</androidx.constraintlayout.widget.ConstraintLayout>
