<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/android:colorBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/android:colorBackground"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle"
            app:title="@string/industry_choice"
            app:titleTextAppearance="@style/ToolbarTitle"
            app:navigationIcon="@drawable/ic_arrow_back"/>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/search_industry"
        style="@style/SearchField"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_field_height"
        android:layout_marginHorizontal="@dimen/corner_radius"
        android:layout_marginVertical="@dimen/padding_small"
        android:hint="@string/enter_industry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />

    <ImageView
        android:id="@+id/search_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_medium"
        android:src="@drawable/ic_search"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/search_industry"
        app:layout_constraintEnd_toEndOf="@+id/search_industry"
        app:layout_constraintTop_toTopOf="@+id/search_industry" />

    <ImageView
        android:id="@+id/clear_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_medium"
        android:src="@drawable/ic_close"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/search_industry"
        app:layout_constraintEnd_toEndOf="@+id/search_industry"
        app:layout_constraintTop_toTopOf="@+id/search_industry" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/padding_medium"
        android:visibility="gone"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_industry"
        app:layout_constraintBottom_toTopOf="@id/apply_button"
        tools:listitem="@layout/industry_view"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/ProgressBar"
        android:layout_marginVertical="@dimen/padding_small"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/errorPlaceholder"
        style="@style/ErrorPlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/img_error_getting_industries"
        android:visibility="gone"
        android:text="@string/no_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_industry"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/apply_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/reset_button_height"
        android:layout_marginHorizontal="@dimen/padding_medium"
        android:layout_marginBottom="@dimen/padding_large"
        android:background="@drawable/bg_search_info"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/choose"
        android:textAllCaps="false"
        android:textAppearance="@style/MediumTextMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>
